# data-structure

./: .gitignore  CMakeLists.txt
ArrayADT/: avg_sum.cpp  binary_search.cpp  check_sorted.cpp  linear_search.cpp  merge.cpp  rotate.cpp  setting.cpp  shift.cpp
ArrayRepresentation/: 2D.cpp  allocation.cpp  declaration.cpp
EssentialConcepts/: array.cpp  array_parameter.cpp  pointers.cpp  reference.cpp  struct.cpp  struct_parameter.cpp  template.cpp
Heap/: minHeap.c
Matrices/: diagonal_matrix.cpp  lower_triangular_class.cpp  lower_triangular_matrix.cpp  upper_triangular_matrix.cpp
PolynomialRepresentation/: using_linked_lists.cpp
Queue/: array_queue.hpp  circular_queue.cpp  deque.cpp  queue_using_2stacks.cpp  using_array.cpp  using_linked_lists.cpp
Recursion/: combination.cpp  head.cpp  indirectRecursion.cpp  memoization.cpp  sumNaturalNumbers.cpp  tail.cpp  taylorSeries.cpp
Sorting/: BinSort.c  BucketSort.c  CountSort.c  InsertionSort.c  InsertionSortLinked.c  IterativeMergeSort.c  QuickSort.c  RadixSort.c  SelectionSort.c
SparseMatrix/: using_linked_lists.cpp
Stack/: brackets_matching.cpp  implementation_array.cpp  implementation_linkedlist.cpp  stack_template_class.cpp
String/: changing_case.cpp  comparing.cpp  duplicates.cpp  palindrome.cpp  permutation.cpp  reverse.cpp
Trees/: BplusTree.cpp  Btree.cpp  RadixTree.cpp  avl.cpp  create_tree.cpp  tree_class.cpp  trie.cpp
array_ADT/: array_ADT.cpp  array_class.cpp  array_class_template.cpp  avg_sum.cpp  binary_search.cpp  check_sorted.cpp  delete.cpp  get_set.cpp  insert_append.cpp  insert_sorted.cpp  (+10 more)
(+245 files in other folders)
